--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Kintzu — Investor Microsite</title>
     <meta name="description" content="KINTZU: Life Transition Infrastructure — Investor Microsite" />
     <link rel="icon" href="/favicon.ico" />
